[gd_scene load_steps=7 format=3 uid="uid://bo7ryokhn5skx"]

[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_gk5ab"]
[ext_resource type="FontFile" uid="uid://da51eahxyptwu" path="res://Text/Font/pcsenior.ttf" id="2_277d8"]
[ext_resource type="Texture2D" uid="uid://y7f8e0jtpfuq" path="res://MainMenu/logo.png" id="2_rkbp5"]
[ext_resource type="Script" path="res://MainMenu/MainMenuButton.gd" id="4_3q17y"]
[ext_resource type="PackedScene" uid="uid://2ivyuol2wnja" path="res://Plants/plant_plots.tscn" id="5_h15f5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8d6j"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gk5ab")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -99.0
offset_right = 64.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LogoTexture" type="TextureRect" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("2_rkbp5")
stretch_mode = 3

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.54902)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_277d8")
text = "by TheEggmo"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="VBoxContainer/Buttons"]
self_modulate = Color(1, 1, 1, 0.54902)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_277d8")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_s8d6j")
text = "Play"
flat = true
script = ExtResource("4_3q17y")

[node name="TutorialButton" type="Button" parent="VBoxContainer/Buttons"]
self_modulate = Color(1, 1, 1, 0.54902)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_277d8")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxFlat_s8d6j")
text = "Tutorial"
flat = true
script = ExtResource("4_3q17y")

[node name="PlantPlots" parent="." instance=ExtResource("5_h15f5")]
layer_0/tile_data = PackedInt32Array(65537, 0, 1, 131073, 0, 1, 196609, 0, 1, 262145, 0, 1, 327681, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 1, 720897, 0, 1, 786433, 0, 1, 851969, 0, 1, 917505, 0, 1, 983041, 0, 1, 1048577, 0, 1, 1114113, 0, 1, 1179649, 0, 1, 65538, 0, 1, 131074, 0, 1, 196610, 0, 1, 262146, 0, 1, 327682, 0, 1, 393218, 0, 1, 458754, 0, 1, 524290, 0, 1, 589826, 0, 1, 655362, 0, 1, 720898, 0, 1, 786434, 0, 1, 851970, 0, 1, 917506, 0, 1, 983042, 0, 1, 1048578, 0, 1, 1114114, 0, 1, 1179650, 0, 1, 65539, 0, 1, 131075, 0, 1, 196611, 0, 1, 262147, 0, 1, 327683, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 589827, 0, 1, 655363, 0, 1, 720899, 0, 1, 786435, 0, 1, 851971, 0, 1, 917507, 0, 1, 983043, 0, 1, 1048579, 0, 1, 1114115, 0, 1, 1179651, 0, 1, 65540, 0, 1, 131076, 0, 1, 196612, 0, 1, 262148, 0, 1, 327684, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 589828, 0, 1, 655364, 0, 1, 720900, 0, 1, 786436, 0, 1, 851972, 0, 1, 917508, 0, 1, 983044, 0, 1, 1048580, 0, 1, 1114116, 0, 1, 1179652, 0, 1, 65541, 0, 1, 131077, 0, 1, 196613, 0, 1, 262149, 0, 1, 327685, 0, 1, 393221, 0, 1, 458757, 0, 1, 524293, 0, 1, 589829, 0, 1, 655365, 0, 1, 720901, 0, 1, 786437, 0, 1, 851973, 0, 1, 917509, 0, 1, 983045, 0, 1, 1048581, 0, 1, 1114117, 0, 1, 1179653, 0, 1, 65542, 0, 1, 131078, 0, 1, 196614, 0, 1, 262150, 0, 1, 327686, 0, 1, 393222, 0, 1, 458758, 0, 1, 524294, 0, 1, 589830, 0, 1, 655366, 0, 1, 720902, 0, 1, 786438, 0, 1, 851974, 0, 1, 917510, 0, 1, 983046, 0, 1, 1048582, 0, 1, 1114118, 0, 1, 1179654, 0, 1, 65570, 0, 1, 65565, 0, 1, 131101, 0, 1, 196637, 0, 1, 262173, 0, 1, 327709, 0, 1, 393245, 0, 1, 458781, 0, 1, 524317, 0, 1, 589853, 0, 1, 655389, 0, 1, 720925, 0, 1, 786461, 0, 1, 851997, 0, 1, 917533, 0, 1, 983069, 0, 1, 1048605, 0, 1, 1114141, 0, 1, 1179677, 0, 1, 65566, 0, 1, 131102, 0, 1, 196638, 0, 1, 262174, 0, 1, 327710, 0, 1, 393246, 0, 1, 458782, 0, 1, 524318, 0, 1, 589854, 0, 1, 655390, 0, 1, 720926, 0, 1, 786462, 0, 1, 851998, 0, 1, 917534, 0, 1, 983070, 0, 1, 1048606, 0, 1, 1114142, 0, 1, 1179678, 0, 1, 65567, 0, 1, 131103, 0, 1, 196639, 0, 1, 262175, 0, 1, 327711, 0, 1, 393247, 0, 1, 458783, 0, 1, 524319, 0, 1, 589855, 0, 1, 655391, 0, 1, 720927, 0, 1, 786463, 0, 1, 851999, 0, 1, 917535, 0, 1, 983071, 0, 1, 1048607, 0, 1, 1114143, 0, 1, 1179679, 0, 1, 65568, 0, 1, 131104, 0, 1, 196640, 0, 1, 262176, 0, 1, 327712, 0, 1, 393248, 0, 1, 458784, 0, 1, 524320, 0, 1, 589856, 0, 1, 655392, 0, 1, 720928, 0, 1, 786464, 0, 1, 852000, 0, 1, 917536, 0, 1, 983072, 0, 1, 1048608, 0, 1, 1114144, 0, 1, 1179680, 0, 1, 65569, 0, 1, 131105, 0, 1, 196641, 0, 1, 262177, 0, 1, 327713, 0, 1, 393249, 0, 1, 458785, 0, 1, 524321, 0, 1, 589857, 0, 1, 655393, 0, 1, 720929, 0, 1, 786465, 0, 1, 852001, 0, 1, 917537, 0, 1, 983073, 0, 1, 1048609, 0, 1, 1114145, 0, 1, 1179681, 0, 1, 131106, 0, 1, 196642, 0, 1, 262178, 0, 1, 327714, 0, 1, 393250, 0, 1, 458786, 0, 1, 524322, 0, 1, 589858, 0, 1, 655394, 0, 1, 720930, 0, 1, 786466, 0, 1, 852002, 0, 1, 917538, 0, 1, 983074, 0, 1, 1048610, 0, 1, 1114146, 0, 1, 1179682, 0, 1)
demo_mode = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="VBoxContainer/Buttons/PlayButton" to="VBoxContainer/Buttons/PlayButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Buttons/PlayButton" to="VBoxContainer/Buttons/PlayButton" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Buttons/TutorialButton" to="VBoxContainer/Buttons/TutorialButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Buttons/TutorialButton" to="VBoxContainer/Buttons/TutorialButton" method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Buttons/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
